[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = 'littlemail'
version = '0.33'
requires-python = '>=3.8'
description = 'Command-line SMTP email sending tool in Python'
readme = 'README.md'
license = { file='LICENSE' }
keywords = ['email', 'smtp', 'python', 'command line']
authors = [
  { name='xinlin-z', email='xinlin.zhang@hotmail.com' },
]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]


[project.urls]
homepage = 'https://github.com/xinlin-z/littlemail'

